--- a/package.json
+++ b/package.json
@@ -1,39 +1,41 @@
 {
-	"scripts": {
-		"dev": "snowpack dev",
-		"build": "snowpack build",
-		"test": "jest",
-		"format": "prettier --write 'src/**/*.{js,jsx}'",
-		"lint": "prettier --check 'src/**/*.{js,jsx}'",
-		"prepare": "snowpack"
-	},
-	"engines": {
-		"node": "12"
-	},
-	"webDependencies": {},
-	"devDependencies": {},
-	"dependencies": {
-		"@actions/exec": "^1.0.4",
-		"@fullhuman/postcss-purgecss": "^2.2.0",
-		"@snowpack/app-scripts-react": "^1.1.4",
-		"@snowpack/plugin-parcel": "^1.0.0",
-		"@snowpack/plugin-react-refresh": "^1.0.0",
-		"@snowpack/plugin-webpack": "^1.1.0",
-		"@testing-library/jest-dom": "^5.9.0",
-		"@testing-library/react": "^10.2.0",
-		"autoprefixer": "^9.8.0",
-		"classnames": "^2.2.6",
-		"firebase-tools": "^8.4.1",
-		"fs-extra": "^9.0.1",
-		"http-proxy-middleware": "^1.0.4",
-		"jest": "^26.0.1",
-		"parcel": "^1.12.4",
-		"postcss-cli": "^7.1.1",
-		"postcss-import": "^12.0.1",
-		"prettier": "^2.0.5",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
-		"snowpack": "^2.2.4",
-		"tailwindcss": "^1.4.6"
-	}
+  "scripts": {
+    "dev": "snowpack dev",
+    "build": "snowpack build",
+    "test": "jest",
+    "format": "prettier --write 'src/**/*.{js,jsx}'",
+    "lint": "prettier --check 'src/**/*.{js,jsx}'",
+    "prepare": "snowpack",
+    "deploy": "dotenv firebase deploy"
+  },
+  "engines": {
+    "node": "12"
+  },
+  "webDependencies": {},
+  "devDependencies": {},
+  "dependencies": {
+    "@actions/exec": "^1.0.4",
+    "@fullhuman/postcss-purgecss": "^2.2.0",
+    "@snowpack/app-scripts-react": "^1.1.4",
+    "@snowpack/plugin-parcel": "^1.0.0",
+    "@snowpack/plugin-react-refresh": "^1.0.0",
+    "@snowpack/plugin-webpack": "^1.1.0",
+    "@testing-library/jest-dom": "^5.9.0",
+    "@testing-library/react": "^10.2.0",
+    "autoprefixer": "^9.8.0",
+    "classnames": "^2.2.6",
+    "firebase-tools": "^8.4.1",
+    "fs-extra": "^9.0.1",
+    "http-proxy-middleware": "^1.0.4",
+    "jest": "^26.0.1",
+    "parcel": "^1.12.4",
+    "postcss-cli": "^7.1.1",
+    "postcss-import": "^12.0.1",
+    "prettier": "^2.0.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "snowpack": "^2.2.4",
+    "tailwindcss": "^1.4.6",
+    "dotenv": "^8.2.0"
+  }
 }
