--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "format": "prettier --write 'src/**/*.{js,jsx}'",
     "lint": "prettier --check 'src/**/*.{js,jsx}'",
     "prepare": "snowpack",
-    "deploy": "dotenv firebase deploy"
+    "deploy": "npm run build && dotenv cross-var firebase deploy --token '%FIREBASE_TOKEN%'"
   },
   "engines": {
     "node": "12"
@@ -36,6 +36,7 @@
     "react-dom": "^16.13.1",
     "snowpack": "^2.2.4",
     "tailwindcss": "^1.4.6",
-    "dotenv": "^8.2.0"
+    "cross-var": "^1.1.0",
+    "dotenv-cli": "^3.1.0"
   }
 }
