🏕🎢 Checkpoint ./src/components/Header.jsx:617503/485 ./src/index.jsx:617503/396 ./src/index.css:617503/16 ./src/styles.css:617503/45 ./package.json:617503/16

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"format": "prettier --write 'src/**/*.{js,jsx}'",
 		"lint": "prettier --check 'src/**/*.{js,jsx}'",
 		"prepare": "snowpack",
-		"deploy": "npm run build && dotenv cross-var firebase deploy --token '%FIREBASE_TOKEN%'"
+		"deploy": "npm run test && npm run build && dotenv cross-var firebase deploy --token '%FIREBASE_TOKEN%'"
 	},
 	"engines": {
 		"node": "12"
