🎊🎇 Checkpoint ./README.md:617503/809 ./src/components/Header.jsx:617503/105 ./src/index.jsx:617503/132 ./package.json:617503/120 ./src/App.test.jsx:617503/33

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"scripts": {
+    "start": "",
 		"dev": "snowpack dev",
 		"build": "snowpack build",
 		"test": "jest",
 		"format": "prettier --write 'src/**/*.{js,jsx}'",
 		"lint": "prettier --check 'src/**/*.{js,jsx}'",
-		"prepare": "snowpack",
-		"deploy": "npm run build && dotenv cross-var firebase deploy --token '%FIREBASE_TOKEN%'"
+		"deploy": "npm run test && npm run format && npm run lint && npm run build && dotenv cross-var firebase deploy --token '%FIREBASE_TOKEN%'"
 	},
 	"engines": {
 		"node": "12"
