--- a/.build/package.json
+++ b/.build/package.json
@@ -12,7 +12,9 @@
     "node": "12"
   },
   "webDependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.9.0"
+  },
   "dependencies": {
     "@actions/exec": "^1.0.4",
     "@fullhuman/postcss-purgecss": "^2.3.0",
@@ -28,11 +30,15 @@
     "fs-extra": "^9.0.1",
     "jest": "^26.0.1",
     "parcel": "^1.12.4",
+    "postcss-cli": "^7.1.1",
+    "postcss-import": "^12.0.1",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "snowpack": "^2.5.2",
+    "tailwindcss": "^1.4.6",
     "cross-var": "^1.1.0",
     "dotenv-cli": "^3.1.0"
-  }
+  },
+  "browserslist": ">0.75%, not ie 11, not UCAndroid >0, not OperaMini all"
 }
