--- a/snowpack.config.json
+++ b/snowpack.config.json
@@ -3,7 +3,7 @@
 	"scripts": {
 		"build:css": "postcss",
 		"bundle:*": "@snowpack/plugin-react-refresh",
-		"bundle:*": "@snowpack/plugin-webpack"
+		"bundle:*": "@snowpack/plugin-parcel"
 	},
-	"plugins": ["@snowpack/plugin-webpack", "@snowpack/plugin-react-refresh"]
+	"plugins": ["@snowpack/plugin-parcel", "@snowpack/plugin-react-refresh"]
 }
