--- a/snowpack.config.json
+++ b/snowpack.config.json
@@ -1,9 +1,6 @@
 {
 	"extends": "@snowpack/app-scripts-react",
 	"scripts": {
-		"build:css": "postcss",
-		"bundle:*": "@snowpack/plugin-react-refresh",
-		"bundle:*": "@snowpack/plugin-parcel"
 	},
-	"plugins": ["@snowpack/plugin-parcel", "@snowpack/plugin-react-refresh"]
+	"plugins": ["@snowpack/plugin-react-refresh"]
 }
