--- a/package.json
+++ b/package.json
@@ -11,17 +11,14 @@
   "webDependencies": {},
   "devDependencies": {},
   "dependencies": {
-    "@snowpack/app-scripts-react": "^1.12.3",
-    "@snowpack/plugin-react-refresh": "^2.3.2",
+    "@snowpack/app-scripts-react": "^1.12.4",
+    "@snowpack/plugin-react-refresh": "^2.3.3",
     "@snowpack/plugin-webpack": "^2.0.16",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
-    "autoprefixer": "^10.0.0",
-    "classnames": "^2.2.6",
-    "jest": "^26.5.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "snowpack": "^2.14.0",
-    "pm2": "^4.4.1"
+    "jest": "^26.6.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "snowpack": "^2.15.1"
   }
 }
