🗃👦 Checkpoint ./package.json:617503/1736 ./snowpack.config.json:617503/51 ./src/App.jsx:617503/4 ./README.md:617503/235

--- a/snowpack.config.json
+++ b/snowpack.config.json
@@ -1,6 +1,7 @@
 {
   "extends": "@snowpack/app-scripts-react",
   "scripts": {},
+  "plugins": ["@snowpack/plugin-webpack"],
   "exclude": [
     "**/node_modules/**/*",
     "**/__tests__/*",
