👜🌇 Checkpoint ./package.json:617503/2045

--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "node": "12"
   },
   "webDependencies": {},
-  "devDependencies": {},
-  "dependencies": {
-    "@snowpack/app-scripts-react": "^1.12.6",
+  "devDependencies": {
     "@snowpack/plugin-react-refresh": "^2.3.7",
-    "@snowpack/plugin-webpack": "^2.1.0",
+    "@snowpack/app-scripts-react": "^1.12.6",
+    "@snowpack/plugin-webpack": "^2.1.0"
+  },
+  "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "snowpack": "^2.17.0"
