--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "snowpack": "^3.0.13"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead"
+  ]
 }
