--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
     "node": "12"
   },
   "devDependencies": {
-    "@snowpack/plugin-react-refresh": "^2.3.7",
-    "@snowpack/plugin-webpack": "^2.1.0"
+    "@snowpack/plugin-react-refresh": "^2.3.7"
   },
   "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "snowpack": "^3.0.13"
   },
   "browserslist": [
