--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@snowpack/plugin-react-refresh": "^2.3.7"
   },
   "dependencies": {
-    "snowpack": "^3.0.13"
+    "snowpack": "^3.0.13",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "browserslist": [
     ">0.2%",
