🍜🏘 Checkpoint ./snowpack.config.js:617503/569 ./src/index.jsx:617503/40 ./src/App.jsx:617503/1888 ./package.json:617503/801

--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "node": "12"
   },
   "devDependencies": {
-    "@snowpack/plugin-react-refresh": "^2.3.7"
   },
   "dependencies": {
-    "snowpack": "^3.0.13",
+    "snowpack": "3.0.13",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
