--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
     "build": "snowpack build"
   },
   "engines": {
-    "node": "14"
+    "node": "12"
   },
   "devDependencies": {},
   "dependencies": {
-    "snowpack": "3.0.13",
+    "snowpack": "^3.1.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.2"
   },
   "browserslist": [
     ">0.2%",
