--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "snowpack": "^3.1.1",
+    "snowpack": "3.0.13",
     "react": "^17.0.1",
     "react-dom": "^17.0.2"
   },
