--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
   "engines": {
     "node": "12"
   },
-  "devDependencies": {
-    "snowpack": "^3.1.1",
-    "@snowpack/plugin-react-refresh": "^2.4.1"
-  },
+  "devDependencies": {},
   "dependencies": {
-    "react": "^17.0.2",
+    "snowpack": "3.0.13",
+    "react": "^17.0.1",
     "react-dom": "^17.0.2",
     "wouter": "^2.7.4"
   },
