--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
   "scripts": {
-    "start": "snowpack dev",
-    "dev": "snowpack dev",
-    "build": "snowpack build"
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
-  "engines": {
-    "node": "12"
-  },
-  "devDependencies": {},
   "dependencies": {
-    "snowpack": "3.0.13",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "vite": "^2.1.0"
   },
   "browserslist": [
     ">0.2%",
     "not dead"
   ],
+  "engines": {
+    "node": "12"
+  },
   "glitch": {
     "projectType": "generated_static"
   }
