--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "wouter": "^2.7.4",
-    "react-spring": "^9.0.0"
+    "react-helmet": "^6.1.0",
+    "react-spring": "^9.0.0",
+    "wouter": "^2.7.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
