--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-spring": "^9.0.0",
-    "wouter": "^2.7.4"
+    "wouter": "^2.7.4",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
