--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react-dom": "^17.0.2",
     "react-spring": "^9.0.0",
     "wouter": "^2.7.4",
-    "react-helmet": "^6.1.0"
+    "react-helmet-async": "^1.0.8"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
