--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react-dom": "^17.0.2",
     "react-spring": "^9.1.2",
     "wouter": "^2.7.4",
-    "react-helmet-async": "^1.0.8",
-    "tailwindcss": "^2.1.2"
+    "react-helmet-async": "^1.0.8"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
