--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glitch-hello-react",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A simple React single page app, built with Vite and React.",
   "scripts": {
     "start": "vite",
@@ -12,10 +12,10 @@
     "react-dom": "^18.0.0",
     "react-spring": "^9.4.4",
     "wouter": "^2.7.4",
-    "react-helmet-async": "^1.3.0"
+    "react-helmet-async": "^1.3.0",
+    "@vitejs/plugin-react": "^1.3.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react-refresh": "^1.3.6",
     "vite": "^2.4.4"
   },
   "browserslist": [
