--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "description": "A simple React single page app, built with Vite and React.",
   "scripts": {
     "start": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+    "build": "tsc && vite build",
+    "serve": "vite preview",
+    "watch": "tsc --noEmit --watch"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-spring": "^9.7.2",
-    "wouter": "^2.11.0",
-    "react-helmet-async": "^1.3.0",
-    "@vitejs/plugin-react": "^4.0.3"
+    "@vitejs/plugin-react": "^4.0.4"
   },
   "devDependencies": {
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "@types/react": "^18.2.27",
+    "@types/react-dom": "^18.2.12",
+    "typescript": "^5.0.2",
+    "@vitejs/plugin-react-swc": "^3.4.0"
   },
   "browserslist": [
     ">0.2%",
@@ -24,9 +26,6 @@
   ],
   "engines": {
     "node": "14.x"
-  },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/glitch-hello-react"
   },
   "glitch": {
     "projectType": "generated_static"
