--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "watch": "tsc --noEmit --watch"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.0.4"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "vite": "^4.0.0",
+    "@codemirror/language": "^6.9.1",
+    "@codemirror/state": "^6.3.1",
+    "@codemirror/view": "^6.21.3",
+    "@lezer/highlight": "^1.1.6",
     "@types/react": "^18.2.27",
     "@types/react-dom": "^18.2.12",
+    "@vitejs/plugin-react-swc": "^3.4.0",
     "typescript": "^5.0.2",
-    "@vitejs/plugin-react-swc": "^3.4.0"
+    "vite": "^4.0.0"
   },
   "browserslist": [
     ">0.2%",
