--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@codemirror/state": "^6.3.1",
     "@codemirror/view": "^6.21.4",
     "@lezer/highlight": "^1.1.6",
+    "@radix-ui/react-icons": "^1.3.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
