--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,12 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+.npmignore
 dist
 dist-ssr
 *.local
 coverage
+lib/
 
 # Editor directories and files
 .vscode/*
