--- a/.builds/check.yml
+++ b/.builds/check.yml
@@ -16,12 +16,12 @@ tasks:
      sudo apt-get install nodejs -y
  - install: |
      cd dusa
-     npm --version
-     npm install
+     npm ci
  - test: |
      cd dusa
      npm run coverage
      npm run prettier
+     npm run lint
      npm run build
      npm run lib
  - github: |
