--- a/.builds/check.yml
+++ b/.builds/check.yml
@@ -14,6 +14,9 @@ tasks:
      echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" | sudo tee /etc/apt/sources.list.d/nodesource.list
      sudo apt-get update
      sudo apt-get install nodejs -y
+ - check-package-lock: |
+    cd dusa
+     npx --yes package-lock-utd@1.x.x
  - install: |
      cd dusa
      npm ci
