Take 2 on fixing CI test

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettier:check": "prettier --check .",
     "preview": "vite preview",
     "test": "vitest run",
+    "tsc": "tsc",
     "watch": "vitest"
   },
   "devDependencies": {
