Create first API docs, modify README, bump to 0.0.4.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "dusa",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "type": "module",
   "main": "lib/client.js",
   "types": "lib/client.d.ts",
-  "homepage": "https://dusa.rocks/",
+  "homepage": "https://dusa.rocks",
   "repository": {
     "type": "git",
     "url": "https://git.sr.ht/~robsimmons/dusa"
@@ -12,6 +12,15 @@
   "bugs": {
     "url": "https://todo.sr.ht/~robsimmons/Dusa"
   },
+  "keywords": [
+    "asp",
+    "data",
+    "database",
+    "datalog",
+    "immutable",
+    "logic programming",
+    "persistent"
+  ],
   "license": "GPL-3.0-only",
   "scripts": {
     "build": "tsc && vite build",
