add a common js module with rollup

--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "dusa",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "type": "module",
   "main": "lib/client.js",
   "types": "lib/client.d.ts",
+  "exports": {
+    "require": "./lib/client.cjs",
+    "import": "./lib/client.js"
+  },
   "homepage": "https://dusa.rocks",
   "repository": {
     "type": "git",
@@ -26,7 +30,7 @@
     "build": "tsc && vite build",
     "coverage": "vitest run --coverage",
     "dev": "vite",
-    "lib": "tsc --project tsconfig.package.json",
+    "lib": "tsc --project tsconfig.package.json && rollup lib/client.js --file lib/client.cjs --format cjs",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "prettier": "prettier --write *.ts *.json *.html *.md **/*.ts* **/*.json **/*.css **/*.html **/*.md",
     "prettier:check": "prettier --check .",
@@ -58,6 +62,7 @@
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rollup": "^4.5.2",
     "typescript": "^5.0.2",
     "vite": "^5.0.0",
     "vitest": "^0.34.6"
