--- a/docs/package.json
+++ b/docs/package.json
@@ -12,7 +12,12 @@
   "dependencies": {
     "@astrojs/check": "^0.3.1",
     "@astrojs/starlight": "^0.13.0",
+    "@fontsource/fira-mono": "^5.0.8",
+    "@fontsource/fira-sans": "^5.0.17",
+    "@fontsource/fira-sans-condensed": "^5.0.8",
     "astro": "^3.2.3",
+    "install": "^0.13.0",
+    "npm": "^10.2.4",
     "sharp": "^0.32.5",
     "typescript": "^5.3.2"
   }
