--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: npm ci
+        working-directory: docs
+      - run: npm ci
       - run: npm run coverage
       - uses: coverallsapp/github-action@v2
         with:
