--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Submit to coveralls
+name: Check that the package and website can build correctly
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  submit-coverage:
+  test-building:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -19,10 +19,14 @@ jobs:
         with:
           node-version: 22.x
 
-      - name: Test
-        run: npm run coverage
+      - name: Build package
+        run: npm run lib
 
-      - name: Submit
-        uses: coverallsapp/github-action@v2
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build website
+        run: npm run build
+
+      - name: Build docs
+        run: |
+          cd docs
+          npm ci
+          npm run build
