--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22.x
+      - run: npm ci
 
       - name: Check formatting with prettier
         run: npm run prettier:check
