--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22.x
+      - run: npm ci
 
       - name: Test
         run: npm run coverage
