--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,5 +24,5 @@ jobs:
 
       - name: Publish package
         env:
-          NODE_AUTH_TOKEN: "${{ secrets.NPM_PUBLISH_TOKEN }}"
+          NODE_AUTH_TOKEN: '${{ secrets.NPM_PUBLISH_TOKEN }}'
         run: npm publish
