Prettier, some ignoring

--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "dev": "vite",
     "lib": "tsc --project tsconfig.package.json && rollup lib/client.js --file lib/client.cjs --format cjs",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "prettier": "prettier --write *.ts *.json *.html *.md **/*.ts* **/*.json **/*.css **/*.html **/*.md",
-    "prettier:check": "prettier --check .",
+    "prettier": "prettier --ignore-path .prettierignore --write *.ts *.json *.html *.md **/*.ts* **/*.json **/*.css **/*.html **/*.md",
+    "prettier:check": "prettier --ignore-path .prettierignore --check .",
     "preview": "vite preview",
     "protobuf": "buf generate --template proto/buf.gen.yaml proto && prettier --write src/gen/*.ts",
     "test": "vitest run",
