--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "watch": "vitest"
   },
   "devDependencies": {
-    "@bufbuild/protobuf": "^1.6.0",
+    "@bufbuild/protobuf": "^2.2.2",
+    "@bufbuild/protoc-gen-es": "^2.2.2",
     "@codemirror/commands": "^6.3.0",
     "@codemirror/language": "^6.9.2",
     "@codemirror/lint": "^6.4.2",
@@ -63,5 +64,9 @@
     "typescript": "^5.0.2",
     "vite": "^5.0.13",
     "vitest": "^1.6.0"
+  },
+  "dependencies": {
+    "@xmldom/xmldom": "^0.9.4",
+    "ts-protoc-gen": "^0.15.0"
   }
 }
