--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "homepage": "https://dusa.rocks",
   "repository": {
     "type": "git",
-    "url": "https://git.sr.ht/~robsimmons/dusa.git"
+    "url": "https://github.com/robsimmons/dusa"
   },
   "bugs": {
-    "url": "https://todo.sr.ht/~robsimmons/Dusa"
+    "url": "https://github.com/robsimmons/dusa/issues"
   },
   "keywords": [
     "data",
@@ -32,7 +32,7 @@
     "coverage": "vitest run --coverage",
     "dev": "vite",
     "lib": "tsc --project tsconfig.package.json && rollup lib/client.js --file lib/client.cjs --format cjs",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "prettier": "prettier --ignore-path .prettierignore --write *.ts *.json *.html *.md **/*.ts* **/*.json **/*.css **/*.html **/*.md",
     "prettier:check": "prettier --ignore-path .prettierignore --check .",
     "preview": "vite preview",
@@ -42,35 +42,27 @@
     "watch": "vitest"
   },
   "devDependencies": {
-    "@bufbuild/protobuf": "^2.2.2",
-    "@bufbuild/protoc-gen-es": "^2.2.2",
     "@codemirror/commands": "^6.3.0",
     "@codemirror/language": "^6.9.2",
     "@codemirror/lint": "^6.4.2",
     "@codemirror/state": "^6.3.1",
     "@codemirror/view": "^6.21.4",
+    "@eslint/js": "^9.14.0",
     "@lezer/highlight": "^1.1.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
-    "@vitest/coverage-istanbul": "^1.6.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
+    "@vitest/coverage-istanbul": "^2.1.5",
+    "eslint": "^9.14.0",
     "prettier": "^3.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rollup": "^4.5.2",
     "sketchzone": "^0.0.11",
     "typescript": "^5.0.2",
+    "typescript-eslint": "^8.14.0",
     "vite": "^5.0.13",
-    "vitest": "^1.6.0"
-  },
-  "dependencies": {
-    "@xmldom/xmldom": "^0.9.4",
-    "ts-protoc-gen": "^0.15.0"
+    "vitest": "^2.1.5"
   }
 }
