--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "homepage": "https://dusa.rocks",
   "repository": {
     "type": "git",
-    "url": "https://git.sr.ht/~robsimmons/dusa.git"
+    "url": "https://github.com/robsimmons/dusa"
   },
   "bugs": {
-    "url": "https://todo.sr.ht/~robsimmons/Dusa"
+    "url": "https://github.com/robsimmons/dusa/issues"
   },
   "keywords": [
     "data",
