--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@eslint/js": "^9.14.0",
     "@lezer/highlight": "^1.1.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@types/node": "^22.9.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react-swc": "^3.3.2",
