--- a/.github/workflows/check20.yml
+++ b/.github/workflows/check20.yml
@@ -4,7 +4,7 @@ on:
   push:
 
 jobs:
-  run-static-tests:
+  run-static-tests-node-20:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
