--- a/.github/workflows/check20.yml
+++ b/.github/workflows/check20.yml
@@ -1,10 +1,10 @@
-name: Dusa tests
+name: Dusa tests (node v20)
 
 on:
   push:
 
 jobs:
-  run-static-tests:
+  run-static-tests-node-20:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -13,7 +13,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22.x
+          node-version: 20.x
           registry-url: 'https://registry.npmjs.org'
       - run: npm ci
 
